--- a/sma-visualization/sma-visualization/sma-visualization.csproj
+++ b/sma-visualization/sma-visualization/sma-visualization.csproj
@@ -65,6 +65,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LineChart.cs" />
     <Compile Include="SMAData.cs" />
     <Compile Include="SMAParser.cs" />
     <Page Include="MainWindow.xaml">
