--- a/sma-visualization/sma-visualization/packages.config
+++ b/sma-visualization/sma-visualization/packages.config
@@ -3,4 +3,7 @@
   <package id="LiveCharts" version="0.9.7" targetFramework="net48" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net48" />
+  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net48" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net48" />
 </packages>
