--- a/sma-visualization/sma-visualization/sma-visualization.csproj
+++ b/sma-visualization/sma-visualization/sma-visualization.csproj
@@ -119,5 +119,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="stonks.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
