--- a/sma-visualization/sma-visualization/sma-visualization.csproj
+++ b/sma-visualization/sma-visualization/sma-visualization.csproj
@@ -79,6 +79,9 @@
     <Compile Include="LineChart.cs" />
     <Compile Include="SMAData.cs" />
     <Compile Include="SMAParser.cs" />
+    <Compile Include="Table.xaml.cs">
+      <DependentUpon>Table.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -91,6 +94,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Table.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
