--- a/sma-visualization/sma-visualization/sma-visualization.csproj
+++ b/sma-visualization/sma-visualization/sma-visualization.csproj
@@ -77,6 +77,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BarChart.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="LineChart.cs" />
     <Compile Include="SMAData.cs" />
     <Compile Include="SMAParser.cs" />
@@ -122,6 +123,9 @@
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="symbols.json">
+      <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
   <ItemGroup>
